@@ -6,7 +6,7 @@ It was downloaded from:
 
     <http://stack.lod2.eu>
 
-Upstream Author(s):
+Upstream Author:
 
     Sebastian Tramp <tramp@informatik.uni-leipzig.de>
 
